--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://image.redbull.com/rbcom/010/2016-04-08/1331787492680_8/0012/0/0/173/3456/2938/1150/1/gwin-puts-the-yt-tues-through-its-paces-in-socal.jpg");
+    background-image: url("\\ss002207\TAASTALO$\Documents\GitHub\mywebsite\img\SC_TeamsHintergrund-08.jpg");
 
     background-repeat: repeat-x;
     background-size: cover;
@@ -20,7 +20,7 @@ body {
 
 .my-background
 {
-    background-color: rgba(255, 255, 255, 0.85)
+    background-color: #FFFFFF
 }
 
 #carouselExampleCaptions {
@@ -29,7 +29,7 @@ body {
 }
 
 .carousel-caption {
-    text-shadow: 5px 3px 5px rgb(13, 37, 146) ;
+    text-shadow: 5px 3px 5px #001155 ;
 }
 
 .icon-links {
